Ensure selection button text is centre aligned

--- a/src/styles/components/_selection.scss
+++ b/src/styles/components/_selection.scss
@@ -52,6 +52,7 @@ $selection-indexHeight: 20px;
 			border-radius: $_radius;
 			display: flex;
 			cursor: pointer;
+			text-align: center;
 
 			&:hover {
 				background-color: $_whiteSemiOpaque;
